@@ -39,7 +39,19 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-		</plugins>
-	</build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.5.4</version>
+      <configuration>
+        <argLine>
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+		
 </project>
